--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "irfanhariyanto",
   "license": "MIT",
   "dependencies": {
-    "@adiwajshing/baileys": "github:adiwajshing/Baileys",
+    "@adiwajshing/baileys": "github:WhiskeySockets/Baileys",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@vitalets/google-translate-api": "^8.0.0",
     "acrcloud": "^1.4.0",
@@ -28,6 +28,7 @@
     "didyoumean": "^1.2.2",
     "fake-useragent": "^1.0.1",
     "fetch": "^1.1.0",
+    "ffmpeg": "^0.0.4",
     "figlet": "^1.5.2",
     "file-type": "^16.5.3",
     "fluent-ffmpeg": "^2.1.2",
